--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   pin_code_fields: ^8.0.1
   flutter_spinkit: ^5.2.1
   flutter_bloc: ^9.1.1
+  intl: ^0.20.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
