--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   intl: ^0.20.2
   image_picker: ^1.1.2
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
