--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl: ^0.20.2
   image_picker: ^1.1.2
   dio: ^5.9.0
+  url_launcher: ^6.3.2
+  easy_localization: ^3.0.8
 
 dev_dependencies:
   flutter_test:
@@ -67,7 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/lang/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
