--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,7 +44,9 @@
             </intent-filter>
         </activity>
         
-
+    <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="high_importance_channel" />
         
         <meta-data
             android:name="flutterEmbedding"
