--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_messaging:  ^15.2.5
   firebase_core: ^3.13.0
   flutter_local_notifications: ^17.2.3
+  connectivity_plus: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +58,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+  flutter_launcher_icons: ^0.14.4
+flutter_icons:  
+   android: true
+   ios: true
+   image_path: "assets/images/q_logo.png"
+   adaptive_icon_background: "#000000"   # black background
+   adaptive_icon_foreground: "assets/images/q_logo.png"
+   adaptive_icon_foreground_inset: 30
+   min_sdk_android: 21
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
