--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^3.13.0
   flutter_local_notifications: ^17.2.3
   connectivity_plus: ^6.1.5
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
