--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 25.2.0+27
 
 environment:
   sdk: ^3.8.1
@@ -48,6 +48,7 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   connectivity_plus: ^6.1.5
   flutter_staggered_animations: ^1.1.1
+  in_app_review: ^2.0.10
 
 dev_dependencies:
   flutter_test:
